[package]
name = "r2d2_redis_cluster"
version = "0.1.3"
authors = ["Atsushi Koge <atuk721@gmail.com>"]
keywords = ["redis", "cluster", "database", "r2d2", "pool"]
description = "Redis cluster support for the r2d2 connection pool."
homepage = "https://github.com/atuk721/r2d2-redis-cluster"
repository = "https://github.com/atuk721/r2d2-redis-cluster"
license = "MIT"
readme = "README.md"

[dependencies]
r2d2 = "0.8"
redis_cluster_rs = "0.1.6"
